## Process this file with automake to produce Makefile.in

bin_PROGRAMS = heman
heman_SOURCES = heman.c heman.h heman_types.h hashtable.c hashtable.h  hashtable_private.h stats.c stats.h rules.c rules.h health.c health.h  hashtable_itr.h hashtable_itr.c
heman_CFLAGS = $(OPTIMIZATION) -Wall $(ARCH) $(PROF) --std=c99 -fgnu89-inline
